# MetGet

./: .gitignore  .pre-commit-config.yaml  LICENSE  LICENSE.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: pytest.yaml
client/: README.md  metget-client  pyproject.toml  requirements.txt  setup.py
client/metgetclient/: __init__.py  metget_build.py  metget_credits.py  metget_data.py  metget_environment.py  metget_status.py  metgetclient.py  spinnerlogger.py
client/src/metget_client/: __init__.py  metget_build.py  metget_client.py  metget_credits.py  metget_environment.py  metget_status.py
cloudformation/: metget.yaml
documentation/: forcing_types.md
documentation/source/: api.rst  api.yaml  api_oapi3.yaml  build.rst  conf.py  forcing.rst  index.rst
examples/metbuild/python/: get_status.py  make_request.py
examples/metbuild/shell/: metget.sh  rq.json
k8s/: metget-configmap.yaml  metget-namespace.yaml
k8s/api/: Dockerfile  api.yaml  metget.py  requirements.txt
k8s/api/metget_api/: access_control.py  build_request.py  check_request.py  database.py  metbuild.py  metbuildrequest.py  request.py  status.py  stormtrack.py  tables.py
k8s/api/metget_api/metbuild/: database_old.py  domain.py  filelist.py  (+2 more)
k8s/argo/: argo-events.yaml  argo-workflows.yaml  patch_argo.sh  workflow-controller-configmap.yaml
k8s/database/: Dockerfile  schema.sql  secret.yaml  server.yaml  storage.yaml
k8s/database/efs_storage/: efs-storage.yaml  storageclass.yaml
k8s/database/local_storage/: storage.yaml
k8s/download/: Dockerfile  aws-coamps-secret.yaml  aws-secret.yaml  metget_download.py  metget_download_workflow_coamps.yaml  metget_download_workflow_ctcx.yaml  metget_download_workflow_gefs.yaml  metget_download_workflow_gfs.yaml  metget_download_workflow_hrrr-alaska.yaml  metget_download_workflow_hrrr.yaml  metget_download_workflow_hwrf.yaml  metget_download_workflow_nam.yaml  metget_download_workflow_nhc.yaml  metget_download_workflow_template.yaml  metget_download_workflow_wpc.yaml  requirements.txt
k8s/download/metgetlib/: coampsdownloader.py  ctcxdownloader.py  ctcxformatter.py  forecastdata.py  hwrfdownloader.py  isotach.py  metdb.py  ncepgefsdownloader.py  ncepgfsdownloader.py  ncephrrralaskadownloader.py  ncephrrrdownloader.py  ncepnamdownloader.py  nhcdownloader.py  noaadownloader.py  s3file.py  spyder.py  wpcdownloader.py
k8s/ingress/: ingress.yaml
k8s/key_manager/: Dockerfile  key_manager  keymanager.yaml  metget-key-manager  requirements.txt  start_keymanager.sh
k8s/rabbit/: argo-event-sensor-amqp.yaml  argo-event-source-amqp.yaml  rabbitmq-controller.yaml  rabbitmq-service.yaml  rabbitmq.yaml
lambdas/check_request/: create_deployment_package.sh  lambda_function.py
lambdas/download/: create_deployment_package.sh  lambda_function.py  requirements.txt
lambdas/download/metgetlib/: coampsdownloader.py  forecastdata.py  gfsdownloader.py  hwrfdownloader.py  isotach.py  metdb.py  namdownloader.py  ncepgefsdownloader.py  ncepgfsdownloader.py  ncephrrralaskadownloader.py  ncephrrrdownloader.py  ncepnamdownloader.py  nhcdownloader.py  noaadownloader.py  s3file.py  spyder.py
lambdas/getStormTrack/: lambda_function.py
lambdas/rebuild_database/: main.py  metdb.py
lambdas/receive_request/: create_deployment_package.sh  lambda_function.py
lambdas/receive_request/metbuild/: database.py  domain.py  input.py  windgrid.py
lambdas/status/: create_deployment_package.sh  lambda_function.py
lambdas/status_cache/: create_deployment_package.sh  lambda_function.py
lambdas/track_cache/: lambda_function.py
libraries/libmetbuild/: CMakeLists.txt
libraries/libmetbuild/cmake/: FindGMP.cmake  FindPROJ.cmake  FindSQLite3.cmake  eccodes.cmake  libmetbuild.cmake  netcdf_check.cmake  python.cmake  python_metbuild.cmake  test_cases.cmake
libraries/libmetbuild/src/: CoordinateConvention.h  CppAttributes.h  Date.cpp  Date.h  FileWrapper.cpp  FileWrapper.h  Geometry.h  Grib.cpp  Grib.h  GribHandle.cpp  GribHandle.h  Grid.cpp  Grid.h  InterpolationData.cpp  InterpolationData.h  InterpolationWeight.h  InterpolationWeights.cpp  InterpolationWeights.h  Kdtree.cpp  Kdtree.h  KdtreePrivate.cpp  KdtreePrivate.h  Logging.cpp  Logging.h  MetBuild.h  MetBuild_Global.h  MetBuild_Status.h  MeteorologicalData.h  Meteorology.cpp  Meteorology.h  NcFile.cpp  NcFile.h  OwiAscii.cpp  OwiAscii.h  OwiAsciiDomain.cpp  OwiAsciiDomain.h  OwiNetcdf.cpp  OwiNetcdf.h  Point.cpp  Point.h  (+15 more)
libraries/libmetbuild/swig/: metbuild.i
libraries/metbuild/: setup.py
libraries/metbuild/metbuild/: database.py  domain.py  filelist.py  gribdataattributes.py  input.py  s3file.py  s3gribio.py  tables.py  windgrid.py
metget/: setup.py
metget/metget/: atcfdownloader.py  forecastdata.py  gfsdownloader.py  hwrfdownloader.py  metdb.py  namdownloader.py  ncepdownloader.py  ncepgfsdownloader.py  ncepnamdownloader.py  nhcdownloader.py  noaadownloader.py  spyder.py
python_functions/metbuild/: crontab.table  process_metget_queue.py  run_job.sh
python_functions/metbuild/metbuild/: cloudwatch.py  database.py  domain.py  input.py  instance.py  queue.py  s3file.py  windgrid.py
src/metget/: __init__.py  metget_adeck.py  metget_build.py  metget_client.py  metget_credits.py  metget_data.py  metget_environment.py  metget_status.py  metget_track.py  spinnerlogger.py
src/metget_client/: __init__.py  metget_build.py  metget_client.py  metget_data.py  metget_status.py  metget_track.py  spinnerlogger.py
test/: adeck_data.py  build_json.py  status_json.py  status_text.py  test_adeck.py  test_build.py  test_cli.py  test_credits.py  test_status.py  test_track.py  track_json.py
test/test_files/: filelist_gefs.json  filelist_gfs.json  filelist_hwrf.json  filelist_nhc.json
(+53 files in other folders)
