[project]
name = "metget-client"
version = "0.0.1"
description = "A client package for interaction with a MetGet server instance"
authors = [
    { name = "Zach Cobell", email = "zcobell@thewaterinstitute.org" },
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
keywords = [ "forecast", "meteorology", "stormsurge" ]
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "requests",
    "halo",
    "prettytable"
]

[project.urls]
"Homepage" = "https://github.com/waterinstitute/metget"
"Bug Reports" = "https://github.com/waterinstitute/metget/issues"
"Source" = "https://github.com/waterinstitute/metget"

[build-system]
requires = [ "setuptools >= 61.0.0", "wheel" ]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = [ "src" ]

[tool.setuptools.dynamic]
version = { attr = "metget_client.__version__" }

[project.scripts]
metget-client = "metget_client:metget_client_cli"
